--- a/svc/generator/Cargo.toml
+++ b/svc/generator/Cargo.toml
@@ -18,6 +18,7 @@ busrt = { version = "0.4.6", features = ["rpc", "ipc"] }
 rand = "0.8.5"
 meval = "0.2.0"
 bmart-derive = "0.1.3"
+uuid = { version = "1.4.0", features = ["v4"] }
 
 [features]
 std-alloc = []
