forbid empty acls

--- a/share/svc-tpl/svc-tpl-aaa-acl.yml
+++ b/share/svc-tpl/svc-tpl-aaa-acl.yml
@@ -3,6 +3,8 @@ command: target/debug/eva-aaa-acl
 bus:
   path: var/bus.ipc
 config:
+  # forbid authentication if no any valid ACL found
+  forbid_empty_acls: false
   # set true to turn on strict ACL formatting - a user/API key won't be
   # authenticated if any of assigned ACLs is missing
   strict_acl_formatting: false
