--- a/share/svc-tpl/svc-tpl-filewriter.yml
+++ b/share/svc-tpl/svc-tpl-filewriter.yml
@@ -32,6 +32,8 @@ config:
     #- value
   # periodically submit all item states
   interval: null
+  # do not submit remote disconnected items (useful for zfrepl or similar)
+  skip_disconnected: false
   # ignore real-time events
   ignore_events: false
   # deduplicate lines (if already written within the last N seconds)
