--- a/svc/generator/Cargo.toml
+++ b/svc/generator/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.8.5"
 meval = "0.2.0"
 bmart-derive = "0.1.3"
 uuid = { version = "1.4.0", features = ["v4"] }
+chrono = "0.4.19"
 
 [features]
 std-alloc = []
