--- a/bindings/js/package.json
+++ b/bindings/js/package.json
@@ -10,6 +10,14 @@
   "main": "./sdk.umd.js",
   "module": "./sdk.es.js",
   "types": "./sdk.es.d.ts",
+  "keywords": [
+    "iot",
+    "iiot",
+    "node",
+    "evaics",
+    "automation",
+    "eva-ics"
+  ],
   "exports": {
     ".": {
       "import": "./sdk.es.js",
