--- a/bindings/js/package.json
+++ b/bindings/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eva-ics/sdk",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "type": "module",
   "description": "Javascript/Typescript SDK for EVA ICS v4",
   "files": [
@@ -37,7 +37,7 @@
   },
   "license": "Apache-2.0",
   "peerDependencies": {
-    "busrt": "^0.2.2",
+    "busrt": "^0.2.3",
     "get-stdin": "^9.0.0",
     "msgpackr": "^1.9.9",
     "sleep-promise": "^9.1.0",
@@ -45,8 +45,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/uuid": "^9.0.7",
     "esbuild": "^0.19.5",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "vite": "^4.5.0",
     "vite-plugin-commonjs": "^0.10.0",
     "vite-plugin-node": "^3.1.0"
