--- a/bindings/js/example/package.json
+++ b/bindings/js/example/package.json
@@ -6,7 +6,7 @@
     "build": "mkdir -p dist && npx esbuild test.ts --bundle --platform=node --outfile=dist/out.js",
     "build-release": "mkdir -p dist && npx esbuild test.ts --bundle --platform=node --minify --outfile=dist/out-release.js"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "@eva-ics/sdk": "file:../dist/"
   },
