js deps cleanup

--- a/bindings/js/example/package.json
+++ b/bindings/js/example/package.json
@@ -12,7 +12,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
-    "esbuild": "^0.19.5",
-    "typescript": "^5.2.2"
+    "esbuild": "^0.19.5"
   }
 }
