ffi svc launcher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
   "svc/controller-lm",
   "svc/svc-modbus-slave",
   "svc/hmi",
+  "svc/ffi",
   "svc/mirror",
   "svc/repl",
   "svc/generator",
