item auto-creation

--- a/share/registry/defaults/config/core.yml
+++ b/share/registry/defaults/config/core.yml
@@ -5,6 +5,8 @@ timeout: 5
 # the suicide timeout, used during shutdown (the node process is forcibly
 # killed after)
 suicide_timeout: 15
+# auto-create items coming from controllers
+auto_create: true
 # instantly save item states
 instant_save: true
 # keep action history in memory (seconds)
