--- a/bindings/cpp/examples/simplesvc/Makefile
+++ b/bindings/cpp/examples/simplesvc/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -fPIC -I../../sdk -I../../../common -std=c++14 -shared -Wall -Werror -s -O3 -o libsvc.so svc.cpp
+	g++ -fPIC -I../../ffi-sdk -I../../../common -std=c++14 -shared -Wall -Werror -s -O3 -o libsvc.so svc.cpp
