--- a/bindings/cpp/Makefile
+++ b/bindings/cpp/Makefile
@@ -3,3 +3,8 @@ all:
 
 pub:
 	./release.sh
+
+doc:
+	rm -rf docs
+	doxygen Doxyfile.in
+	cd docs && gsutil -m cp -a public-read -r . gs://pub.bma.ai/dev/docs/eva4-cpp-sdk/
