--- a/bindings/cpp/Makefile
+++ b/bindings/cpp/Makefile
@@ -7,4 +7,4 @@ pub:
 doc:
 	rm -rf docs
 	doxygen Doxyfile.in
-	cd docs/html && gsutil -m cp -a public-read -r . gs://pub.bma.ai/dev/docs/eva4-cpp-sdk/
+	cd docs/html && gsutil -m rsync -r -d -c -a public-read -r . gs://pub.bma.ai/dev/docs/eva4-cpp-sdk/
