memory usage warn

--- a/share/registry/defaults/config/core.yml
+++ b/share/registry/defaults/config/core.yml
@@ -11,6 +11,8 @@ auto_create: true
 instant_save: true
 # keep action history in memory (seconds)
 keep_action_history: 86400
+# core process memory usage warning (bytes)
+mem_warn: 128_000_000
 # optional inventory database (for huge projects)
 # NOTE: MySQL support is deprecated, use SQLite or PostgreSQL only
 #inventory_db: postgres://USER:PASSWORD@HOST/DB
