--- a/etc/systemd/eva4.service
+++ b/etc/systemd/eva4.service
@@ -7,7 +7,8 @@ User=root
 WorkingDirectory=/opt/eva4
 ExecStart=/opt/eva4/sbin/eva-control start
 ExecStop=/opt/eva4/sbin/eva-control stop
-Restart=no
+Restart=always
+RestartSec=5s
 TimeoutStartSec=180
 
 [Install]
