--- a/docker/test/Makefile
+++ b/docker/test/Makefile
@@ -2,8 +2,8 @@ all:
 	@echo select target
 
 run:
-	docker-compose up
+	docker compose up
 
 clean:
-	docker-compose down
+	docker compose down
 	sudo rm -rf ./data/runtime/registry ./data/runtime/xc ./data/runtime/.container_setup_completed
