default panic for db services

--- a/share/svc-tpl/svc-tpl-db-influx.yml
+++ b/share/svc-tpl/svc-tpl-db-influx.yml
@@ -25,7 +25,7 @@ config:
   # event queue size
   queue_size: 8192
   # panic on critical errors in X seconds after happened (0 - panic immediately)
-  panic_in: null
+  panic_in: 0
   # influx client pool size (default = workers)
   #clients: 2
   # item OIDs / OID masks
