--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -12,6 +12,9 @@ serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
 lettre = { version = "0.10.1", features = ["tokio1-native-tls"] }
 jemallocator = { version = "0.5.0" }
+once_cell = "1.19.0"
+ttl_cache = { version = "0.5" }
+parking_lot = "0.12.1"
 
 [features]
 std-alloc = []
