--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -15,6 +15,7 @@ jemallocator = { version = "0.5.0" }
 once_cell = "1.19.0"
 ttl_cache = { version = "0.5" }
 parking_lot = "0.12.1"
+tokio-task-pool = "0.1.5"
 
 [features]
 std-alloc = []
