--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -16,6 +16,7 @@ once_cell = "1.19.0"
 ttl_cache = { version = "0.5" }
 parking_lot = "0.12.1"
 tokio-task-pool = "0.1.5"
+async-channel = "1.7.1"
 
 [features]
 std-alloc = []
