--- a/svc/ffi/Cargo.toml
+++ b/svc/ffi/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.3.15", features = ["events", "time"] }
+eva-common = { version = "0.3.23", features = ["events", "time"] }
 eva-sdk = { version = "0.3.5" }
 tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51" }
@@ -20,6 +20,7 @@ clap = { version = "3.0.7", features = ["derive"] }
 [features]
 std-alloc = []
 openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
+openssl3 = ["eva-common/openssl3"]
 
 [profile.release]
 strip = true
