--- a/svc/hmi/http_api.yml
+++ b/svc/hmi/http_api.yml
@@ -441,6 +441,10 @@ log.get:
       typ: String
       des: Filter by regex in message
       req: false
+    - nam: msg
+      typ: String
+      des: message filter substring
+      req: false
   ret: List of log records
   http_req:
     level: info
