--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eva-svc-template"
+name = "eva-controller-system"
 version = "4.0.2"
 edition = "2021"
 
@@ -13,6 +13,9 @@ serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
 async-channel = "1.6.1"
 jemallocator = { version = "0.5.0" }
+once_cell = "1.19.0"
+sysinfo = "0.30.5"
+parking_lot = "0.12.1"
 
 [features]
 std-alloc = []
