--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -4,18 +4,31 @@ version = "4.0.2"
 edition = "2021"
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
+busrt = { version = "0.4", features = ["rpc", "ipc"], optional = true }
 eva-common = { version = "0.3", features = ["events", "time"] }
-eva-sdk = { version = "0.3" }
+eva-sdk = { version = "0.3", optional = true }
 tokio = { version = "1.20.1", features = ["full"] }
-async-trait = { version = "0.1.51" }
+async-trait = { version = "0.1.51", optional = true }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
-async-channel = "1.6.1"
 jemallocator = { version = "0.5.0" }
 once_cell = "1.19.0"
 sysinfo = "0.30.5"
 parking_lot = "0.12.1"
 
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+
+[[bin]]
+name = "eva-controller-system"
+path = "src/service.rs"
+required-features = ["service"]
+
 [features]
 std-alloc = []
+openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
+openssl3 = ["eva-common/openssl3"]
+
+service = ["busrt", "eva-sdk", "async-trait"]
