--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 busrt = { version = "0.4", features = ["rpc", "ipc"], optional = true }
-eva-common = { version = "0.3", features = ["events", "time"] }
+eva-common = { version = "0.3.38", features = ["events", "time"] }
 eva-sdk = { version = "0.3", optional = true }
 tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51", optional = true }
@@ -15,6 +15,11 @@ jemallocator = { version = "0.5.0" }
 once_cell = "1.19.0"
 sysinfo = "0.30.5"
 parking_lot = "0.12.1"
+http-body-util = { version = "0.1.0", optional = true }
+hyper = { version = "1.1.0", features = ["server", "http1"], optional = true }
+hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"], optional = true }
+serde_json = "1.0.96"
+tokio-task-pool = { version = "0.1.5", features = ["log"] }
 
 [profile.release]
 strip = true
@@ -31,4 +36,6 @@ std-alloc = []
 openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
 openssl3 = ["eva-common/openssl3"]
 
-service = ["busrt", "eva-sdk", "async-trait"]
+service = ["busrt", "eva-sdk", "async-trait", "http-body-util", "hyper", "hyper-util"]
+
+default = ["service"]
