--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51", optional = true }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
-jemallocator = { version = "0.5.0" }
+jemallocator = { version = "0.5.0", optional = true }
 once_cell = "1.19.0"
 sysinfo = "0.30.5"
 parking_lot = "0.12.1"
@@ -51,9 +51,9 @@ std-alloc = []
 openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
 openssl3 = ["eva-common/openssl3"]
 
-service = ["busrt", "eva-sdk", "async-trait", "http-body-util", "hyper", "hyper-util"]
+service = ["busrt", "eva-sdk", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator"]
 agent = ["serde_yaml", "env_logger", "is-terminal", "reqwest"]
-agent-linux = ["agent", "syslog"]
+agent-linux = ["agent", "syslog", "jemallocator"]
 
 #default = ["service"]
 #default = ["agent"]
