--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -26,6 +26,7 @@ env_logger = { version = "0.11.1", optional = true }
 syslog = { version = "6.1.0", optional = true }
 bmart = "0.2.6"
 reqwest = { version = "0.11.24", optional = true, features = ["json"] }
+openssl = { version = "0.10.63", optional = true }
 
 [profile.release]
 strip = true
@@ -48,12 +49,12 @@ required-features = ["agent-linux"]
 
 [features]
 std-alloc = []
-openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
+openssl-vendored = ["eva-common/openssl-vendored", "openssl/vendored"]
 openssl3 = ["eva-common/openssl3"]
 
 service = ["busrt", "eva-sdk", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator"]
 agent = ["serde_yaml", "env_logger", "is-terminal", "reqwest"]
-agent-linux = ["agent", "syslog", "jemallocator"]
+agent-linux = ["agent", "syslog", "openssl", "jemallocator"]
 
 #default = ["service"]
 #default = ["agent"]
