--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -24,7 +24,7 @@ serde_yaml = { version = "0.9.31", optional = true }
 is-terminal = { version = "0.4.10", optional = true }
 env_logger = { version = "0.11.1", optional = true }
 syslog = { version = "6.1.0", optional = true }
-bmart = "0.2.6"
+#bmart = "0.2.6"
 reqwest = { version = "0.11.24", optional = true, features = ["json"] }
 openssl = { version = "0.10.63", optional = true }
 clap = { version = "4.4.18", optional = true, features = ["derive"] }
